...
    <string name="available_to_mentor_and_mentee">Available to mentor and be a mentee</string>
    <string name="bio">Bio</string>
    <string name="both">Both</string>
    <string name="both_users_only_available_to_mentor">This request is not possible because both users are only ‘available to
        mentor\'</string>
    <string name="bug">Bug</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_relation_denied">No</string>
    <string name="cancel_relation_text">Are you sure you want to cancel the relation?</string>
    <string name="cancel_relation_title">Cancel Relation</string>
    <string name="cancelled">Cancelled</string>
    <string name="change_password">Change Password</string>
    <string name="char_error">Please don\'t exceed the character limit</string>
    <string name="clear_all">Clear all</string>
    <string name="code_of_conduct">Code of Conduct</string>
    <string name="completed">Completed</string>
    <string name="completed_relations">Completed Relations</string>
    <string name="confirm_cancel_relation">Yes</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="confirm_logout_msg">Are you sure you want to logout?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_task_success">Task created</string>
    <string name="current_new_password_should_not_same">Current and New passwords should not be same</string>
    <string name="current_password">Current Password</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
...
    <string name="end_date_format">dd/mm/YYYY</string>
    <string name="end_date_label">End Date:</string>
    <string name="error_checkbox">Please choose at least one of the following options.\n You may change it
        later</string>
    <string name="error_empty_email">Email cannot be empty</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_empty_password_confirmation">Password confirmation cannot be empty</string>
    <string name="error_empty_username">Username/Email cannot be empty</string>
    <string name="error_filter_not_found">Oops! No member found</string>
    <string name="error_name_too_long">Name should have a maximum of %1$d characters</string>
    <string name="error_name_too_short">Name should have a minimum of %1$d characters</string>
    <string name="error_not_matching_passwords">Passwords didn\'t match!</string>
    <string name="error_password_too_weak">Your password is too weak! Use at least one small and capital letter, one
        number and one special sign!</string>
...
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
        laborum.</string>
    <string name="mark_task_message">Mark task as complete?</string>
    <string name="mark_task_success">Task marked as complete</string>
    <string name="mark_task_title">Mark task</string>
    <string name="member_profile">Member Profile</string>
    <string name="mentee">Mentee</string>
    <string name="mentor">Mentor</string>
    <string name="model_task_1">Add Projects section to CV</string>
    <string name="model_task_2">Prepare questions for Job Interview X</string>
...
    <string name="navigation_title_profile">Profile</string>
    <string name="navigation_title_relation">Relation</string>
    <string name="navigation_title_requests">Requests</string>
    <string name="need_mentoring">Need mentoring</string>
    <string name="new_password">New Password</string>
    <string name="no">No</string>
    <string name="no_achievements">No achievements</string>
    <string name="no_current_mentorship_relation">You are not in a current mentorship relation.</string>
    <string name="no_recent_achievements">No recent achievements</string>
    <string name="no_tasks">No tasks</string>
    <string name="not_available_to_mentor_or_mentee">Not available to be a mentor or a mentee</string>
    <string name="not_implemented">This feature is not implemented yet.</string>
    <string name="notes">Notes</string>
    <string name="notes_empty_error">Notes cannot be empty</string>
    <string name="occupation">Occupation</string>
    <string name="ok">OK</string>
...
